sanger/sites/placental-organoid-experiment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placental-organoid-experiment
spec:
  selector:
    matchLabels:
      app: placental-organoid-experiment
  replicas: 1
  template:
    metadata: 
      name: placental-organoid-experiment
      labels:
        app: placental-organoid-experiment
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: placental-organoid-experiment
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/placental-organoid-experiment/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placental-organoid-experiment-donors-1-and-2
spec:
  selector:
    matchLabels:
      app: placental-organoid-experiment-donors-1-and-2
  replicas: 1
  template:
    metadata: 
      name: placental-organoid-experiment-donors-1-and-2
      labels:
        app: placental-organoid-experiment-donors-1-and-2
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: placental-organoid-experiment-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: placental-organoid-experiment-donors-1-and-2
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_donors_1_2_for_cellxgene.h5ad", "--title", "Donors 1 & 2", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placental-organoid-experiment-donor-1
spec:
  selector:
    matchLabels:
      app: placental-organoid-experiment-donor-1
  replicas: 1
  template:
    metadata: 
      name: placental-organoid-experiment-donor-1
      labels:
        app: placental-organoid-experiment-donor-1
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: placental-organoid-experiment-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: placental-organoid-experiment-donor-1
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_donor_1_for_cellxgene.h5ad", "--title", "Donor 1", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placental-organoid-experiment-donor-2
spec:
  selector:
    matchLabels:
      app: placental-organoid-experiment-donor-2
  replicas: 1
  template:
    metadata: 
      name: placental-organoid-experiment-donor-2
      labels:
        app: placental-organoid-experiment-donor-2
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: placental-organoid-experiment-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: placental-organoid-experiment-donor-2
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_donor_2_for_cellxgene.h5ad", "--title", "Donor 2", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
