sanger/sites/placental-organoid-experiment/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: placental-organoid-experiment
spec:
  virtualhost:
    fqdn: placental-organoid-experiment.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: placental-organoid-experiment
          port: 80
    - match: /static
      services:
        - name: placental-organoid-experiment-donor-2
          port: 80
    - match: /donors-1-and-2
      prefixRewrite: "/" 
      services:
        - name: placental-organoid-experiment-donors-1-and-2
          port: 80
    - match: /donor-1
      prefixRewrite: "/" 
      services:
        - name: placental-organoid-experiment-donor-1
          port: 80
    - match: /donor-2
      prefixRewrite: "/" 
      services:
        - name: placental-organoid-experiment-donor-2
          port: 80
---
